[package]
name = "guid"
version = "0.1.0"
authors = ["sanfusu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
guid_proc = { git = "https://github.com/sanfusu/guid_proc" }
syn = "1.0"
pest = "2.1"
pest_derive = "2.1"